client/src/components/profile/profile/Profile.css
.profile-grid {
    display: grid;
    grid-template-areas:
      'top top'
      'about about'
      'exp edu'
      'github github';
    grid-gap: 1rem;
  }

.profile-top {
  grid-area: top;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  border:1px solid #ccc
}

.profile-top img {
    width: 250px;
}

.profile-top .icons a {
color: #fff;
margin: 0 0.3rem;
}

.profile-top .icons a:hover {
    color: var(--dark-color);
}

.profile-about{
    grid-area: about;
    text-align: center;
    border:1px solid #ccc
}

.profile-github{
    grid-area: github;
}

.profile-github .repo {
    display: flex;
  }
  
  .profile-github .repo > div:first-child {
    flex: 7;
    flex-basis: 70%;
  }

.profile-about .skills {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.profile-github > div:last-child {
  flex: 3;
  flex-basis: 20%;
}

.profile-exp {
  grid-area: exp;
}

.profile-edu {
  grid-area: edu;
}

.profile-exp h2,
.profile-edu h2 {
  margin-bottom: 1rem;
}

.profile-exp > div,
.profile-edu > div {
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  border-bottom: #ccc 1px dotted;
}

.profile-exp > div:last-child,
.profile-edu > div:last-child {
  border: 0;
}

.profile-exp p,
.profile-edu p {
  margin: 0.5rem 0;
}

.line {
    height: 1px;
    background: rgb(151, 151, 151);
    margin: 1.5rem 0;
  }

  @media (max-width: 700px) {

    .profile-grid {
      grid-template-areas:
        'top'
        'about'
        'exp'
        'edu'
        'github';
    }

    .profile-about .skills {
      flex-direction: column;
  }
    }

